[gd_scene load_steps=14 format=3 uid="uid://b73h6ayypbd7x"]

[ext_resource type="Script" path="res://Game9/UI/MainMenu/main_menu.gd" id="1_kf2tv"]
[ext_resource type="Texture2D" uid="uid://gxudh1slydj8" path="res://Game9/UI/MainMenu/menu_back.png" id="2_dlicg"]
[ext_resource type="FontFile" uid="uid://0li4b5b8np1l" path="res://Game9/UI/SuperBrigade-xRoW0.otf" id="3_ac8d2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fsgjp"]
bg_color = Color(0.329158, 0.329158, 0.329158, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ix5d"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2b3hi"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c0pvt"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gfwcp"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_15une"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ydoek"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iby8j"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_utacm"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uynaw"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)

[node name="MainMenu" type="Control"]
texture_filter = 6
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kf2tv")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dlicg")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -182.0
offset_top = 30.0
offset_right = 182.0
offset_bottom = 117.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ac8d2")
theme_override_font_sizes/font_size = 84
text = "RACE!"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -95.0
offset_right = -20.0
offset_bottom = 95.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fsgjp")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -85.0
offset_right = 100.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="NewGame" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ac8d2")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_3ix5d")
theme_override_styles/hover = SubResource("StyleBoxFlat_2b3hi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_c0pvt")
text = "Play"

[node name="Options" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_fonts/font = ExtResource("3_ac8d2")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_gfwcp")
theme_override_styles/hover = SubResource("StyleBoxFlat_15une")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ydoek")
text = "Options"

[node name="ExitGame" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_fonts/font = ExtResource("3_ac8d2")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_iby8j")
theme_override_styles/hover = SubResource("StyleBoxFlat_utacm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uynaw")
text = "Exit"

[connection signal="pressed" from="Panel/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ExitGame" to="." method="_on_exit_game_pressed"]
